welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: not found: value cpt
		ecritMessage(cpt)		
                             ^